--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.jojoldu.book'
-version '1.0-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
+version '1.0.4-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = 1.8
 
 repositories {
@@ -13,7 +13,27 @@ repositories {
     jcenter()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
+
+    // lombok
+    implementation('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+//    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+//    implementation("org.mariadb.jdbc:mariadb-java-client")
+//    implementation('com.h2database:h2')
+
+//    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+//    implementation('org.springframework.session:spring-session-jdbc')
+//
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+//    testImplementation("org.springframework.security:spring-security-test")
 }
