--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ dependencies {
     testImplementation('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
 
-//    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 //    implementation("org.mariadb.jdbc:mariadb-java-client")
-//    implementation('com.h2database:h2')
+    implementation('com.h2database:h2')
 
 //    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
 //    implementation('org.springframework.session:spring-session-jdbc')
