--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation('com.h2database:h2')
 
-//    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 소셜로그인. spring-security-oauth2-client, spring-security-oauth2-jose 관리
 //    implementation('org.springframework.session:spring-session-jdbc')
-//
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 //    testImplementation("org.springframework.security:spring-security-test")
 }
