--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation('com.h2database:h2')
 
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 소셜로그인. spring-security-oauth2-client, spring-security-oauth2-jose 관리
-//    implementation('org.springframework.session:spring-session-jdbc')
+    implementation('org.springframework.session:spring-session-jdbc')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 //    testImplementation("org.springframework.security:spring-security-test")
