--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.hikari.username=sa
 spring.h2.console.enabled=true
 
 spring.profiles.include=oauth
+
+spring.session.store-type=jdbc
