--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     implementation('org.springframework.session:spring-session-jdbc')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-//    testImplementation("org.springframework.security:spring-security-test")
+    testImplementation("org.springframework.security:spring-security-test") // 스프링 시큐리티 테스트 지원
 }
