--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,22 @@ branches:
   only:
     - master # master 브랜치가 푸시될 때 수행
 
+before_deploy:
+  - zip -r freelec-springboot2-webservice * # AWS CodeDeploy 는 jar 인식못함
+  - mkdir -p deploy # Travis CI 실행 중인 위치에 deploy 디렉토리 생성
+  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
+
+deploy: # 외부 서비스와 연동될 행위 선언
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: freelec-springboot-build-dev.jihyang1 # S3 버킷
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private # zip 파일 접근을 private으로
+    local_dir: deploy # before_deploy에서 생성한 디렉토리. 해당 위치의 파일들만 전송
+    wait-until-deployed: true
+
 # Travis CI 서버의 Home
 cache:
   directories: # 해당 디렉토리 캐시해 같은 의존성은 다음 배포때 받지 않음
