--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,17 @@ deploy: # 외부 서비스와 연동될 행위 선언
     local_dir: deploy # before_deploy에서 생성한 디렉토리. 해당 위치의 파일들만 전송
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: freelec-springboot-build-dev.jihyang1
+    key: freelec-springboot2-webservice.zip
+    bundle_type: zip
+    application: freelec-springboot2-webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: freelec-springboot2-webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 # Travis CI 서버의 Home
 cache:
   directories: # 해당 디렉토리 캐시해 같은 의존성은 다음 배포때 받지 않음
