--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,13 @@ branches:
     - master # master 브랜치가 푸시될 때 수행
 
 before_deploy:
-  - zip -r freelec-springboot2-webservice * # AWS CodeDeploy 는 jar 인식못함
-  - mkdir -p deploy # Travis CI 실행 중인 위치에 deploy 디렉토리 생성
-  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 전체 압축
+  - cd ../ && mkdir -p deploy # Travis CI는 디렉토리 단위로만 업로드할 수 있기 때문에 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/freelec-springboot2-webservice.zip # deploy로 zip파일 이동
 
 deploy: # 외부 서비스와 연동될 행위 선언
   - provider: s3
