--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,16 @@ files:
   - source: /
     destination: /home/ec2-user/app/step2/zip/
     overwrite: yes
+
+# CodeDeploy 에서 ec2 로 넘겨준 파일은 모두 ec2-user 권한 설정
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks: # 배포단계에서 실행할 명령
+  ApplicationStart: # deploy.sh 을 ec2-user 권한으로 실행
+    - location: deploy.sh
+      timeout: 60
+      runas: ec2-user
