--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/app/step2/zip/
+    destination: /home/ec2-user/app/step3/zip/
     overwrite: yes
 
 # CodeDeploy 에서 ec2 로 넘겨준 파일은 모두 ec2-user 권한 설정
@@ -13,7 +13,15 @@ permissions:
     group: ec2-user
 
 hooks: # 배포단계에서 실행할 명령
-  ApplicationStart: # deploy.sh 을 ec2-user 권한으로 실행
-    - location: deploy.sh
+  AfterInstall:
+  - location: stop.sh # 엔진엑스와 연결되어 있지 않은 스프링 부트를 종료합니다.
+    timeout: 60
+    runas: ec2-user
+  ApplicationStart:
+    - location: start.sh # 엔진엑스와 연결되어 있지 않은 Port로 새 버전의 스프링 부트를 시작합니다.
+      timeout: 60
+      runas: ec2-user
+  ValidateService:
+    - location: health.sh # 새 스프링 부트가 정상적으로 실행됐는지 확인 합니다.
       timeout: 60
       runas: ec2-user
