feat: zip 폴더경로 변경

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,11 +30,11 @@ jobs:
       shell: bash
 
     - name: Before deploy
-      run: mkdir -p before-deploy && cp scripts/*.sh before-deploy/ && cp appspec.yml before-deploy/ && cp build/libs/*.jar before-deploy/ && cd before-deploy
+      run: mkdir -p before-deploy && cp scripts/*.sh before-deploy/ && cp appspec.yml before-deploy/ && cp build/libs/*.jar before-deploy/
       shell: bash
       
     - name: Make zip file
-      run: zip -r $GITHUB_SHA.zip *
+      run: zip -r $GITHUB_SHA.zip ./before-deploy/*
       shell: bash
 
     - name: Configure AWS credentials
