--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,30 +15,37 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
-    
+
     - name: Set up JDK 11
       uses: actions/setup-java@v1.4.3
       with:
         java-version: 11
-        
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       shell: bash
-      
+
     - name: Build with Gradle
       run: ./gradlew build
       shell: bash
-      
-    - name: Make zip file
-      run: zip -r ./$GITHUB_SHA.zip .
+
+    - name: Before deploy
+      run: mkdir -p before-deploy && cp scripts/*.sh before-deploy/ && cp appspec.yml before-deploy/ && cp build/libs/*.jar before-deploy/
       shell: bash
-      
+
+    - name: Make zip file
+      run: zip -r $GITHUB_SHA.zip ./before-deploy/*
+      shell: bash
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-        
+
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name freelec-springboot2-webservice --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name freelec-springboot2-webservice-group --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
